# spectrum

./: README.md  main.py  pyproject.toml
data/: README.md  download.sh
launch_configs/: accelerate_config_zero2.yaml  accelerate_config_zero3.yaml  distributional.yaml  diverse_valid_all.yaml  icl_pt_it.yaml  icl_spectrum.yaml  launch_sbatch_grid.py  train_v0.yaml  train_v1.yaml
src/spectrum/: format_utils.py  lm_tools.py  sample_utils.py  train.py  weight_transfer.py
src/spectrum/distributional_alignment/: eval_distributional.py
src/spectrum/distributional_alignment/distributional_tasks/: __init__.py  global_oqa.py  habermas.py  mpi.py  numbergame.py  nytimes.py  rotten_tomatoes.py  states.py  task_registry.py  urn.py
src/spectrum/diverse_valid/: eval_diverse_valid.py  eval_diverse_valid_all.py  generation_task.py  llm_judge.py  task_registry.py
src/spectrum/diverse_valid/tasks/: cars.py  claude_gerunds.py  colors.py  emails.py  periodic_table.py  phone_numbers.py  prime_numbers.py  random_seed.py  rng.py  us_states.py  weekdays.py
src/spectrum/icl_classes/: bernoulli.py  data_cache.py  dataloaders.py  eval_icl.py  generic_multivariate.py  icl_class.py  individual_multivariate.py  single_variable_iid.py  utils.py
src/spectrum/icl_classes/icl_dataset_classes/: ambient.py  arc.py  babynames.py  bare.py  changemyview.py  chatbotarena.py  chemistry.py  coinflip.py  collective_alignment.py  community_alignment.py  dices.py  diffuse_distributions.py  discrete_dists.py  drop.py  example.py  generativesocialchoice.py  globaloqa.py  gpqa.py  gsm8k.py  habermas.py  (+27 more)
(+2 files in other folders)
