[project]
name = "spectrum"
version = "0.1.0"
description = "Spectrum tuning code"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bitsandbytes>=0.48.1",
    "black>=25.9.0",
    "datasets<=3.6.0",
    "deepspeed>=0.18.0",
    "fastparquet>=2024.11.0",
    "isort>=7.0.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "peft>=0.17.1",
    "pillow>=12.0.0",
    "pyarrow>=21.0.0",
    "pyreadstat>=1.3.1",
    "scipy>=1.16.2",
    "torch>=2.9.0",
    "transformers>=4.57.1",
    "trl>=0.24.0",
    "wandb>=0.22.2",
]
